# zack

./: .env  .gitignore  Cargo.toml  README.md
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh
.github/workflows/: docs.yaml  page.yaml  rust.yaml  standard.yaml
cli/: Cargo.toml
cli/src/: main.rs
db/: Cargo.toml
directories/: Cargo.toml
directories/src/: lib.rs
docs/: README.md  astro.config.mjs  package-lock.json  package.json
docs/src/content/docs/: index.mdx
docs/src/content/docs/00_zack/: 00_goals.md  early_direction.md  progressive_integration.md
docs/src/content/docs/10_internal/: cmd.md  files.md  sea_orm.md
docs/src/content/docs/components/: build_db.md  build_db_fetch.md  cbor_dag.md  change_detection.md  execution_instrumentation.md  execution_vfs.md  execution_vfs.mdx  https_interception.md  incremental.md  infra_dependencies.md  meta_build.md  oci_images.md  output_vfs.md  prolly_trees.md  remote_builds.md  sandbox.md  snapshot_resume.md  source_vfs.md
docs/src/content/docs/concepts/: dev_loop.md
docs/src/content/docs/ideas/: 00_goals.md  goals.md  other_build_systems.md  sandbox.md  starlark.md
docs/src/content/docs/other_build_systems/: 00_index.md  bazel_terminology.md  cross_buildsystem_integration.md
docs/src/content/docs/reference/: bazel_terminology.md  terminology.md
examples/simple_c/src/: ZACK.star  main.c
exec/: Cargo.toml
exec/src/: lib.rs  sandbox.rs
loader/: Cargo.toml
loader/src/: lib.rs
migration/: Cargo.toml
migration/src/: m20220101_000001_create_table.rs
model/: Cargo.toml
model/src/: hash.rs  lib.rs
playground/: Cargo.toml
playground/examples/: starlark_with_extra.rs
playground/src/starlark/: mod.rs  rule.rs
rules/: Cargo.toml
rules/src/: lib.rs
rules/starlark/@core/: core.star  other.star
store/: Cargo.toml
store/src/: lib.rs
zaun/: Cargo.toml
zaun/src/: identity.rs  lib.rs  main.rs  subid.rs
zisch/: .env  Cargo.toml
zisch/migrations/2025-04-30-150940_files/: down.sql  up.sql
zisch/src/: build_config.rs  build_configs.rs  db.rs  import.rs  lib.rs  model.rs  schema.rs
zisch/src/entity/: build_config.rs  file.rs  mod.rs  prelude.rs
zopf/: Cargo.toml
zopf/src/: artifact.rs  lib.rs
zwirn/: Cargo.toml
zwirn/src/: main.rs
zwischen/: Cargo.toml
zwischen/src/: lib.rs
