[workspace]
resolver = "2"
members = ["cli", "db", "loader", "rules", "directories"]

[workspace.package]
edition = "2024"
rust-version = "1.85.0"

[workspace.dependencies]
starlark = { version = "0.13.0" }

include_dir = "0.7.4"

# data types
url = { version = "2.5.4", features = ["serde"] }
chrono = { version = "0.4.39", features = ["serde"] }
uuid = { version = "1.13.2", features = ["serde"] }
# UTF-8 only Paths
camino = { version = "1.1.9", features = ["serde1", "proptest1"] }

# serialization
serde = "1.0.218"
serde_json = "1.0.139"
# https://github.com/engineerd/cjson
# Alternative: https://github.com/Internet-of-People/iop-rs/tree/develop/json-digest
cjson = "0.1.2"

# data structures
ahash = "0.8.11"

# error handling
thiserror = "2.0.11"
anyhow = "1.0.96"

# system
nix = { version = "0.29" , features = ["mount", "fanotify", "inotify", "resource", "stat", "sched"]}

# fs
ignore = { version = "0.4", features = ["simd-accel"] }

# crypto
blake3 = { version = "1.8" , features = ["serde", "rayon"]}

# utility
dupe = "0.9.1"
quote = "1.0.38"
tempfile = "3.17.1"

tracing = { version = "0.1.41", features = ["log"] }
tracing-subscriber = "0.3.19"

# cli
bpaf = "0.9.16"

# tui
# https://github.com/ratatui/ratatui
ratatui = "0.29.0"
# Colored command output
# https://github.com/ratatui/ansi-to-tui
# vterm widget for ratatui:
# https://github.com/a-kenji/tui-term

# db
diesel = { version = "2.2.8", features = ["sqlite"] }

# parallelize
rayon = "1.10"

# dev
prop-test = "0.1.1"
