[package]
name = "cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "zack"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
starlark = { workspace = true }

tracing = { workspace = true }
tracing-subscriber = { workspace = true }

directories = { path = "../directories" }
rules = { path = "../rules" }
loader = { path = "../loader" }
