[package]
name = "exec"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
tracing = { workspace = true }
serde = { workspace = true }
nix = { workspace = true }
camino = { workspace = true }
thiserror = { workspace = true }
blake3 = { workspace = true }
tempfile = { workspace = true }
libc = "0.2.171"
