[package]
name = "exec"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[lib]
name = "exec"
path = "src/lib.rs"

[[bin]]
name = "exec"
path = "src/main.rs"

[dependencies]
tracing = { workspace = true }
serde = { workspace = true }
nix = { workspace = true }
camino = { workspace = true }
thiserror = { workspace = true }
blake3 = { workspace = true }
tempfile = { workspace = true }
bpaf = { workspace = true }