[package]
name = "zisch"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
directories.workspace = true
migration.workspace = true

anyhow.workspace = true
tracing.workspace = true
thiserror.workspace = true
camino.workspace = true
blake3.workspace = true

sqlx.workspace = true
sea-orm.workspace = true


anymap2.workspace = true
ahash.workspace = true
tokio.workspace = true

url.workspace = true
