[package]
name = "zwirn"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
thiserror.workspace = true

indoc.workspace = true

serde.workspace = true

allocative.workspace = true
derive_more.workspace = true
either.workspace = true
starlark.workspace = true
